# txeo

./: .clang-format  .clangd  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  gcovr.cfg  index.html  sitemap.xml  xmake.lua
.github/workflows/: ci.yml  doxygen.yml
api-reference/data-table/: index.html
api-reference/data-table-norm/: index.html
api-reference/logger/: index.html
api-reference/logger-console/: index.html
api-reference/logger-file/: index.html
api-reference/loss/: index.html
api-reference/matrix/: index.html
api-reference/matrix-io/: index.html
api-reference/ols_gd_trainer/: index.html
api-reference/predictor/: index.html
api-reference/tensor/: index.html
api-reference/tensor-agg/: index.html
api-reference/tensor-func/: index.html
api-reference/tensor-op/: index.html
api-reference/tensor-part/: index.html
api-reference/tensor-shape/: index.html
api-reference/trainer/: index.html
api-reference/vector/: index.html
changelog/: index.html
cmake/: FindTensorFlow.cmake  TxeoConfig.cmake.in
examples/: CMakeLists.txt  rhoe_main.cpp  txeo_example.cpp  txeo_olsGD.cpp  txeo_predictors.cpp  txeo_shapes.cpp  txeo_tensorio.cpp  txeo_tensors.cpp
getting-started/: index.html
include/rhoe/: Tensor.h
include/txeo/: DataTable.h  DataTableNorm.h  Logger.h  LoggerConsole.h  LoggerFile.h  Loss.h  Matrix.h  MatrixIO.h  Model.h  OlsGDTrainer.h  OrdLeastSquaresTrainer.cpp  OrdLeastSquaresTrainer.h  Predictor.h  Tensor.h  TensorAgg.h  TensorFunc.h  TensorIO.h  TensorIterator.h  TensorIteratorConst.h  TensorOp.h  TensorPart.h  TensorShape.h  Trainer.h  Vector.h  types.h
include/txeo/detail/: ModelPrivate.h  PredictorPrivate.h  TensorHelper.h  TensorPrivate.h  TensorShapePrivate.h  pch.h  utils.h
mkdocs/: mkdocs.yml
mkdocs/docs/: changelog.md  getting-started.md  index.md  usage.md
mkdocs/docs/api-reference/: data-table-norm.md  data-table.md  logger-console.md  logger-file.md  logger.md  loss.md  matrix-io.md  matrix.md  ols_gd_trainer.md  predictor.md  tensor-agg.md  tensor-func.md  tensor-op.md  tensor-part.md  tensor-shape.md  tensor.md  trainer.md  vector.md
search/: search_index.json
src/: CMakeLists.txt  DataTable.cpp  DataTableNorm.cpp  Logger.cpp  LoggerConsole.cpp  LoggerFile.cpp  Loss.cpp  Matrix.cpp  MatrixIO.cpp  Model.cpp  OlsGDTrainer.cpp  OrdLeastSquaresTrainer.cpp  Predictor.cpp  Tensor.cpp  TensorAgg.cpp  TensorFunc.cpp  TensorIO.cpp  TensorOp.cpp  TensorPart.cpp  TensorShape.cpp  Trainer.cpp  Vector.cpp  utils.cpp
tests/: CMakeLists.txt  tDataTable.cpp  tDataTableNorm.cpp  tLoggerConsole.cpp  tLoggerFile.cpp  tLoss.cpp  tMatrix.cpp  tMatrixIO.cpp  tOlsGDTrainer.cpp  tPredictor.cpp  tTensor.cpp  tTensorAgg.cpp  tTensorFunc.cpp  tTensorIO.cpp  tTensorOp.cpp  tTensorPart.cpp  tTensorShape.cpp  tUtils.cpp  tVector.cpp
tests/test_data/files/: insurance.csv
tests/test_data/model_regression/: fingerprint.pb  keras_metadata.pb  saved_model.pb
tests/test_data/model_regression/variables/: variables.data-00000-of-00001  variables.index
usage/: index.html
