add_executable(txeo_example txeo_example.cpp)
add_executable(txeo_shapes txeo_shapes.cpp)
add_executable(txeo_tensors txeo_tensors.cpp)
add_executable(txeo_tensorio txeo_tensorio.cpp)

target_link_libraries(txeo_example txeo_shared)
target_link_libraries(txeo_shapes txeo_shared)
target_link_libraries(txeo_tensors txeo_shared)
target_link_libraries(txeo_tensorio txeo_shared)
